unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/GlobalSegmentConfTable__mdt.object-meta.xml
<CustomObject>
    <label>Global Segment Conf Table</label>
    <pluralLabel>Global Segment Conf Tables</pluralLabel>
</CustomObject>