unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/FirstSaleFrom__c.field-meta.xml
<CustomField>
        <fullName>FirstSaleFrom__c</fullName>
        <description>From value of the First Sale date interval (expressed as number of months ago)</description>
        <label>First Sale From (Months)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>