unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/FirstSaleTo__c.field-meta.xml
<CustomField>
        <fullName>FirstSaleTo__c</fullName>
        <description>To value of the First Sale date interval (expressed as number of months ago)</description>
        <label>First Sale To (Months)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>