unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/Flag__c.field-meta.xml
<CustomField>
        <fullName>Flag__c</fullName>
        <description>If populated, instead of assign the segment set to true the field specified</description>
        <label>Flag</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>