unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/FrequencyFrom__c.field-meta.xml
<CustomField>
        <fullName>FrequencyFrom__c</fullName>
        <label>Frequency From</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>