unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/FrequencyTo__c.field-meta.xml
<CustomField>
        <fullName>FrequencyTo__c</fullName>
        <label>Frequency To</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>