unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/HighestTurnover__c.field-meta.xml
<CustomField>
        <fullName>HighestTurnover__c</fullName>
        <description>Product group with the highest turnover</description>
        <label>Highest Turnover</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>