unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/Maison__c.field-meta.xml
<CustomField>
        <fullName>Maison__c</fullName>
        <description>The GR's maisons</description>
        <label>Maison</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cartier</fullName>
                </value>
                <value>
                    <fullName>Jaeger Le Coultre</fullName>
                </value>
                <value>
                    <fullName>Van Cleef &amp; Arpels</fullName>
                </value>
                <value>
                    <fullName>RICSC_Cartier</fullName>
                    <isActive>false</isActive>
                    <label>RICSC_Cartier</label>
                </value>
                <value>
                    <fullName>RICSC_JaegerLeCoultre</fullName>
                    <isActive>false</isActive>
                    <label>RICSC_JaegerLeCoultre</label>
                </value>
                <value>
                    <fullName>RICSC_VanCleefAndArpels</fullName>
                    <isActive>false</isActive>
                    <label>RICSC_VanCleefAndArpels</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>