unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/Order__c.field-meta.xml
<CustomField>
        <fullName>Order__c</fullName>
        <description>Order to take in consideration the segment in the calculation</description>
        <label>Order</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>