unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/Potential__c.field-meta.xml
<CustomField>
        <fullName>Potential__c</fullName>
        <label>Potential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High;Very High;VVR</fullName>
                </value>
                <value>
                    <fullName>Medium;Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>