unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/PPFrequencyFrom__c.field-meta.xml
<CustomField>
        <fullName>PPFrequencyFrom__c</fullName>
        <label>PP Frequency From</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>