unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/PPFrequencyTo__c.field-meta.xml
<CustomField>
        <fullName>PPFrequencyTo__c</fullName>
        <label>PP Frequency To</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>