unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/PPRecencyFrom__c.field-meta.xml
<CustomField>
        <fullName>PPRecencyFrom__c</fullName>
        <description>From value of the Last Sale date interval (expressed as number of months ago) for Product Parameter</description>
        <label>PP Recency From (Months)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>