unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/PPRecencyTo__c.field-meta.xml
<CustomField>
        <fullName>PPRecencyTo__c</fullName>
        <description>To value of the Last Sale date interval (expressed as number of months ago) for Product Parameter</description>
        <label>PP Recency To (Months)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>