unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/PPTurnoverFrom__c.field-meta.xml
<CustomField>
        <fullName>PPTurnoverFrom__c</fullName>
        <description>From value of the PP Turnover interval</description>
        <label>PP Turnover From</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>