unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/PPTurnoverTo__c.field-meta.xml
<CustomField>
        <fullName>PPTurnoverTo__c</fullName>
        <description>To value of the PP Turnover interval</description>
        <label>PP Turnover To</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>