unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/ProductParameter__c.field-meta.xml
<CustomField>
        <fullName>ProductParameter__c</fullName>
        <label>Product Parameter</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>