unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/ProductParameterToExclude__c.field-meta.xml
<CustomField>
        <fullName>ProductParameterToExclude__c</fullName>
        <label>Product Parameter to Exclude</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>