unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/ProductParameterToInclude__c.field-meta.xml
<CustomField>
        <fullName>ProductParameterToInclude__c</fullName>
        <label>Product Parameter to Include</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>