unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/RangeForTotalTurnoverFrom__c.field-meta.xml
<CustomField>
        <fullName>RangeForTotalTurnoverFrom__c</fullName>
        <label>Range for total turnover from</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>