unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/RangeForTotalTurnoverTo__c.field-meta.xml
<CustomField>
        <fullName>RangeForTotalTurnoverTo__c</fullName>
        <label>Range for total turnover to</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>