unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/RangeTurnoverFrom__c.field-meta.xml
<CustomField>
        <fullName>RangeTurnoverFrom__c</fullName>
        <description>From value of the Range Turnover interval</description>
        <label>R Turnover From (EUR)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>