unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/RangeTurnoverTo__c.field-meta.xml
<CustomField>
        <fullName>RangeTurnoverTo__c</fullName>
        <description>To value of the Range Turnover interval</description>
        <label>R Turnover To (EUR)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>