unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/RecencyFrom__c.field-meta.xml
<CustomField>
        <fullName>RecencyFrom__c</fullName>
        <description>From value of the Last Sale date interval (expressed as number of months ago)</description>
        <label>Recency From (Months)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>