unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/RecencyTo__c.field-meta.xml
<CustomField>
        <fullName>RecencyTo__c</fullName>
        <description>To value of the Last Sale date interval (expressed as number of months ago)</description>
        <label>Recency To (Months)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>