unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/Segment__c.field-meta.xml
<CustomField>
        <fullName>Segment__c</fullName>
        <description>The segment to be set on GR after recalculation</description>
        <label>Segment</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>