unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/TurnoverAllTimeFrom__c.field-meta.xml
<CustomField>
        <fullName>TurnoverAllTimeFrom__c</fullName>
        <description>From value of the all time Turnover interval</description>
        <label>Turnover All Time From</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>