unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/fields/TurnoverAllTimeTo__c.field-meta.xml
<CustomField>
        <fullName>TurnoverAllTimeTo__c</fullName>
        <description>To value of the all time Turnover interval</description>
        <label>Turnover All Time To</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>