unpackaged/main/default/objects/GlobalSegmentConfTable__mdt/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>Segment__c</columns>
        <columns>Maison__c</columns>
        <columns>TurnoverAllTimeFrom__c</columns>
        <columns>TurnoverAllTimeTo__c</columns>
        <columns>RangeTurnoverFrom__c</columns>
        <columns>RangeTurnoverTo__c</columns>
        <columns>FirstSaleFrom__c</columns>
        <columns>FirstSaleTo__c</columns>
        <columns>RecencyFrom__c</columns>
        <columns>RecencyTo__c</columns>
        <columns>Potential__c</columns>
        <columns>HighestTurnover__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>